tests/NormalTests/paczka1/small_fuzzy/19466293.err
Error in line 1: RYm S531 24,5
Error in line 5: 0NdiFUtP A171 5,9
Error in line 4: qP7pCfYdq S531 59,5
